welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:12: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:18: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:38: error: not found: value dogHouse
		dogHouse();		
                ^